#*******************************************************************************
# Copyright (c) 2024 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0
#
# SPDX-License-Identifier: EPL-2.0
#******************************************************************************/

[workspace]
members = ["horn-client", "horn-proto", "horn-service-kuksa", "software-horn"]
resolver = "2"

[workspace.package]
license = "EPL-2.0"
readme = "../README.md"
version = "0.1.0-SNAPSHOT"
edition = "2021"

[workspace.dependencies]
async-trait = { version = "0.1" }
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.53", features = ["derive", "env"] }
horn-proto = { path = "horn-proto" }
log = { version = "0.4.29" }
env_logger = { version = "0.11.8" }
protobuf = { version = "3.7.2" }
tokio = { version = "1.48" }
up-rust = { version = "0.9.0" }
up-transport-zenoh = { version = "0.9.0" }
